@@ -113,7 +113,7 @@
 		<SEQ TYPE="OPERATOR">:</SEQ>
 	</RULES>
 
-	<RULES SET="XPATH" DEFAULT="LITERAL1">
+	<RULES SET="XPATH" DEFAULT="LITERAL1" NO_WORD_SEP="-_">
 		<!-- entity refs -->
 		<SPAN TYPE="LITERAL2" NO_WORD_BREAK="TRUE">
 			<BEGIN>&amp;</BEGIN>
